@@ -55,7 +55,7 @@ enum
 extern int GfxFlags;
 
 void TFB_PreInit (void);
-int TFB_InitGraphics (int driver, int flags, int width, int height, int bpp);
+int TFB_InitGraphics (int driver, int flags, int width, int height);
 void TFB_UninitGraphics (void);
 void TFB_ProcessEvents (void);
 
