@@ -103,7 +103,7 @@ void TFB_DrawScreen_CopyToImage (TFB_Image *img, PRECT lpRect, SCREEN src);
 void TFB_DrawScreen_DeleteImage (TFB_Image *img);
 void TFB_DrawScreen_DeleteData (void *);
 void TFB_DrawScreen_WaitForSignal (void);
-void TFB_DrawScreen_ReinitVideo (int driver, int flags, int width, int height, int bpp);
+void TFB_DrawScreen_ReinitVideo (int driver, int flags, int width, int height);
 void TFB_DrawScreen_SetPalette (int paletteIndex, int r, int g, int b);
 
 TFB_Image *TFB_DrawImage_New (TFB_Canvas canvas);
